add page for all utitlity apps

--- a/src/pages/accounts/accounts.html
+++ b/src/pages/accounts/accounts.html
@@ -17,7 +17,7 @@
 
   <ion-grid>
     <ion-row >
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('ProfilePage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/profile.png">
@@ -25,7 +25,7 @@
           <p class="menu-app" >Profile</p>
         </div>
       </ion-col>
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('AboutPage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/about.png">
@@ -34,7 +34,7 @@
         </div>
       </ion-col>
 
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('HelpPage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/help.png">
