add pages for all apps

--- a/src/pages/apps/apps.html
+++ b/src/pages/apps/apps.html
@@ -17,7 +17,7 @@
 
   <ion-grid>
     <ion-row >
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('DataEntryPage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/data-entry.png">
@@ -25,7 +25,7 @@
           <p class="menu-app" >Data Entry</p>
         </div>
       </ion-col>
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('EventCapturePage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/event-capture.png">
@@ -33,7 +33,7 @@
           <p class="menu-app" >Event Capture</p>
         </div>
       </ion-col>
-      <ion-col col-4 (tap)="goToView('')"  >
+      <ion-col col-4 (tap)="goToView('ReportsPage')"  >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/reports.png">
@@ -52,7 +52,7 @@
         </div>
       </ion-col>
 
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('SyncPage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/sync.png">
@@ -60,7 +60,7 @@
           <p class="menu-app" >Sync</p>
         </div>
       </ion-col>
-      <ion-col col-4 (tap)="goToView('')" >
+      <ion-col col-4 (tap)="goToView('SettingsPage')" >
         <div class="apps-contents" padding>
           <ion-thumbnail >
             <img class="menu-app-icon-list" src="assets/app-icons/settings.png">
