--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary" mode="md">
+  <ion-navbar color="primary" >
     <ion-title>Help Search</ion-title>
   </ion-navbar>
 
