update dashboard module

--- a/src/pages/dashboard-filter/dashboard-filter.html
+++ b/src/pages/dashboard-filter/dashboard-filter.html
@@ -4,7 +4,7 @@
     <ion-title>
       Dashboard list
     </ion-title>
-    <ion-buttons start>
+    <ion-buttons end>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         close
       </button>
