--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,18 +7,21 @@
 <ion-header>
 
   <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>About</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content class="about-page">
 
   <ion-grid>
     <ion-row>
       <ion-col class="topSLogan">
-        <div class="logo-inside-app">
+        <div class="logo-inside-app ">
           <img [src]="logoUrl" >
         </div>
       </ion-col>
