--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -31,7 +31,7 @@
           </div>
         </ion-col>
       </ion-row>
-      <div class="updateManagerContents" *ngIf="(isSyncContentOpen[syncContent.id])" >
+      <div *ngIf="(isSyncContentOpen[syncContent.id])" >
         <hr>
         <ion-row>
           <ion-col>
