add profile with accordions and well as about module

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,9 +7,6 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>About</ion-title>
   </ion-navbar>
 
@@ -19,13 +16,65 @@
 <ion-content class="about-page">
 
   <ion-grid>
-    <ion-row>
-      <ion-col class="topSLogan">
-        <div class="logo-inside-app ">
-          <img [src]="logoUrl" >
+
+    <div *ngIf="isLoading">
+      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
+    </div>
+
+    <div *ngIf="!isLoading" class="about-details">
+      <ion-row>
+        <ion-col class="topSLogan">
+          <div class="logo-inside-app">
+            <img [src]="logoUrl" >
+          </div>
+          <div >
+              <span *ngIf="appInformation && appInformation.name">{{ appInformation.name }}</span><br>
+              <span *ngIf="appInformation && appInformation.version">{{ appInformation.version }}</span>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <div class="item-card" *ngFor="let aboutContent of aboutContents">
+        <ion-row (tap)="toggleAboutContents(aboutContent)">
+          <ion-col col-11>
+            <img  class="side-menu-icon" [src]="aboutContent.icon"/>&nbsp;&nbsp;
+            <span ion-text [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'">
+              {{ aboutContent.name }}
+            </span>
+          </ion-col>
+          <ion-col col-1 item >
+            <div style="text-align: center;">
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="!(isAboutContentOpen[aboutContent.id])" name="ios-arrow-down" item-right></ion-icon>
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="(isAboutContentOpen[aboutContent.id])" name="ios-arrow-up" item-right></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <div *ngIf="(isAboutContentOpen[aboutContent.id])" >
+          <hr>
+          <div *ngIf="aboutContent.id == 'systemInfo'">
+            <ion-row>
+              <ion-col >
+                <div *ngFor="let info of systemInfo">
+                  <p><b>{{ info.key }}</b><br>{{ info.value }}</p>
+                </div>
+              </ion-col>
+            </ion-row>
+          </div>
+
+          <div *ngIf="aboutContent.id != 'systemInfo'">
+            <ion-row>
+              <ion-col>
+                {{ aboutContent.name }}'s contents are here<br>Coming soon!!!
+              </ion-col>
+            </ion-row>
+          </div>
+
+
         </div>
-      </ion-col>
-    </ion-row>
+      </div>
+
+    </div>
+
   </ion-grid>
 
 </ion-content>
