--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,15 +7,45 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
+
+  <ion-grid>
+    <div *ngIf="isLoading">
+      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
+    </div>
+
+    <div *ngIf="isLoading">
+      <div class="item-card" *ngFor="let profileContent of profileContents">
+        <ion-row (tap)="toggleProfileContents(profileContent)">
+          <ion-col col-11>
+            <img  class="side-menu-icon" [src]="profileContent.icon"/>&nbsp;&nbsp;
+            <span ion-text [color]="(isProfileContentOpen[profileContent.id]) ?'current' : 'font-color'">
+              {{ profileContent.name }}
+            </span>
+          </ion-col>
+          <ion-col col-1 item >
+            <div style="text-align: center;">
+              <ion-icon [color]="(isProfileContentOpen[profileContent.id]) ?'current' : 'font-color'" *ngIf="!(isProfileContentOpen[profileContent.id])" name="ios-arrow-down" item-right></ion-icon>
+              <ion-icon [color]="(isProfileContentOpen[profileContent.id]) ?'current' : 'font-color'" *ngIf="(isProfileContentOpen[profileContent.id])" name="ios-arrow-up" item-right></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <div *ngIf="(isProfileContentOpen[profileContent.id])" >
+          <hr>
+          <ion-row>
+            <ion-col>
+              {{ profileContent.name }}'s contents are here<br>Coming soon!!!
+            </ion-col>
+          </ion-row>
+        </div>
+      </div>
+    </div>
+  </ion-grid>
 
 </ion-content>
