--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -20,7 +20,7 @@
       <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
     </div>
 
-    <div *ngIf="isLoading">
+    <div *ngIf="!isLoading">
       <div class="item-card" *ngFor="let profileContent of profileContents">
         <ion-row (tap)="toggleProfileContents(profileContent)">
           <ion-col col-11>
