--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -23,8 +23,6 @@
 
     <div *ngIf="isSettingLoaded">
 
-      {{ settingObject|json }}
-
       <div class="item-card" *ngFor="let settingContent of settingContents">
         <ion-row (tap)="toggleSettingContents(settingContent)">
           <ion-col col-11>
@@ -42,62 +40,61 @@
         </ion-row>
         <div class="updateManagerContents" *ngIf="(isSettingContentOpen[settingContent.id])" >
           <hr>
+
           <div *ngIf="settingContent.id == 'synchronization'">
             <div *ngIf="settingObject.synchronization">
-              <ion-row>
-                <ion-col col-5>
-                  <ion-item>
-                    <ion-input type="number"  min="1" [(ngModel)]="settingObject.synchronization.time"></ion-input>
-                  </ion-item>
-                </ion-col>
-                <ion-col col-7>
-                  <ion-item>
-                    <ion-select [(ngModel)]="settingObject.synchronization.timeType" interface="action-sheet">
-                      <ion-option value="minutes">Minute(s)</ion-option>
-                      <ion-option value="hours">Hour(s)</ion-option>
-                    </ion-select>
-                  </ion-item>
-                </ion-col>
-              </ion-row>
-              <button  small  [disabled]="settingContent.isLoading" [color]="(!settingContent.isLoading)?'primary':'whitecolor'" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
-                  <span *ngIf="settingContent.isLoading" >
-                    <page-loading loadingSize="small"></page-loading>
-                    saving ...
-                  </span>
-                <span *ngIf="!settingContent.isLoading" >
-                    Save
-                  </span>
-              </button>
-            </div>
-
-          </div>
-          <div *ngIf="settingContent.id == 'entryForm'">
-
-            <ion-row *ngIf="settingObject.entryForm">
-              <ion-col>
-                <ion-item>
-                  <ion-label>Form Label</ion-label>
-                  <ion-select [(ngModel)]="settingObject.entryForm.label" interface="action-sheet">
-                    <ion-option value="displayName">Display Name</ion-option>
-                    <ion-option value="formName">Form Name</ion-option>
-                  </ion-select>
-                </ion-item>
-                <ion-item>
-                  <ion-label floating>Data elements per page(max)</ion-label>
-                  <ion-input type="number"  min="1" [(ngModel)]="settingObject.entryForm.maxDataElementOnDefaultForm"></ion-input>
-                </ion-item>
-                <button small [disabled]="settingContent.isLoading" [color]="(!settingContent.isLoading)?'primary':'whitecolor'" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
-                  <span *ngIf="settingContent.isLoading" >
-                    <page-loading loadingSize="small"></page-loading>
-                    saving ...
-                  </span>
-                  <span *ngIf="!settingContent.isLoading" >
-                    Save
-                  </span>
+              <div *ngIf="settingContent.isLoading">
+                <page-loading [loadingMessage]="'Applying changes'" [loadingSize]="'large'"></page-loading>
+              </div>
+              <div *ngIf="!settingContent.isLoading">
+                <ion-row>
+                  <ion-col col-5>
+                    <ion-item>
+                      <ion-input type="number"  min="1" [(ngModel)]="settingObject.synchronization.time"></ion-input>
+                    </ion-item>
+                  </ion-col>
+                  <ion-col col-7>
+                    <ion-item>
+                      <ion-select [(ngModel)]="settingObject.synchronization.timeType" interface="action-sheet">
+                        <ion-option value="minutes">Minute(s)</ion-option>
+                        <ion-option value="hours">Hour(s)</ion-option>
+                      </ion-select>
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+                <button  small  color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                  Save
                 </button>
-              </ion-col>
-            </ion-row>
+              </div>
+            </div>
+          </div>
 
+          <div *ngIf="settingContent.id == 'entryForm'">
+            <div *ngIf="settingContent.isLoading">
+              <page-loading [loadingMessage]="'Applying changes'" [loadingSize]="'large'"></page-loading>
+            </div>
+            <div *ngIf="!settingContent.isLoading">
+              <div *ngIf="settingObject.entryForm">
+                <ion-row >
+                  <ion-col>
+                    <ion-item>
+                      <ion-label>Form Label</ion-label>
+                      <ion-select [(ngModel)]="settingObject.entryForm.label" interface="action-sheet">
+                        <ion-option value="displayName">Display Name</ion-option>
+                        <ion-option value="formName">Form Name</ion-option>
+                      </ion-select>
+                    </ion-item>
+                    <ion-item>
+                      <ion-label floating>Data elements per page(max)</ion-label>
+                      <ion-input type="number"  min="1" [(ngModel)]="settingObject.entryForm.maxDataElementOnDefaultForm"></ion-input>
+                    </ion-item>
+                  </ion-col>
+                </ion-row>
+                <button small color="primary" ion-button full large text-capitalize (tap)="applySettings(settingContent)">
+                  Save
+                </button>
+              </div>
+            </div>
           </div>
 
 
