--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,52 +6,68 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="about">
-  <div *ngIf="loadingData">
-    <ion-row >
-      <ion-col >
-        <page-loading loadingSize="large" [loadingMessage]="loadingMessages[loadingMessages.length - 1]"></page-loading>
-      </ion-col>
-    </ion-row>
-  </div>
+<ion-content class="about-page">
 
-  <div *ngIf="!loadingData" >
+  <ion-grid>
 
-    <ion-refresher (ionRefresh)="reLoadContents($event)">
-      <ion-refresher-content ></ion-refresher-content>
-    </ion-refresher>
+    <div *ngIf="isLoading">
+      <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
+    </div>
 
-    <ion-grid>
+    <div *ngIf="!isLoading" class="about-details">
+      <ion-refresher (ionRefresh)="reLoadContents($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
       <ion-row>
-        <ion-col >
-          <ion-item-group>
-            <ion-item-divider color="whitecolor">
-              <b>App Information</b>
-            </ion-item-divider>
-            <ion-item *ngFor="let entry of appInformation;let currentAppInfoIndex = index ">
-              <h2>{{ entry.key }}</h2>
-              <p>{{ entry.value }}</p>
-            </ion-item>
-          </ion-item-group>
-          <ion-list></ion-list>
-          <ion-item-group>
-            <ion-item-divider color="whitecolor">
-              <b>Data Values Status</b>
-            </ion-item-divider>
-            <ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('synced')">
-              <h2>Synced</h2>
-              <p>{{ dataValuesStorage.online }}</p>
-            </ion-item>
-            <ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('not_synced')">
-              <h2>Not Synced</h2>
-              <p>{{ dataValuesStorage.offline }}</p>
-            </ion-item>
-          </ion-item-group>
-          <ion-list></ion-list>
-          <ion-item-group>
-            <ion-item-divider color="whitecolor">
-              <b>Event Storage Status</b>
-            </ion-item-divider>
+        <ion-col class="topSLogan">
+          <div class="logo-inside-app">
+            <img [src]="logoUrl" >
+          </div>
+          <div >
+            <span *ngIf="appInformation && appInformation.name">{{ appInformation.name }}</span><br>
+            <span *ngIf="appInformation && appInformation.version">{{ appInformation.version }}</span>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <div class="item-card" *ngFor="let aboutContent of aboutContents">
+        <ion-row (tap)="toggleAboutContents(aboutContent)">
+          <ion-col col-11>
+            <img  class="side-menu-icon" [src]="aboutContent.icon"/>&nbsp;&nbsp;
+            <span ion-text [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'">
+              {{ aboutContent.name }}
+            </span>
+          </ion-col>
+          <ion-col col-1 item >
+            <div style="text-align: center;">
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="!(isAboutContentOpen[aboutContent.id])" name="ios-arrow-down" item-right></ion-icon>
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="(isAboutContentOpen[aboutContent.id])" name="ios-arrow-up" item-right></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <div *ngIf="(isAboutContentOpen[aboutContent.id])" >
+          <hr>
+          <div *ngIf="aboutContent.id == 'appInformation'">
+            <ion-row>
+              <ion-col >
+                <div *ngFor="let info of appInformation; ">
+                  <p>{{ info.key }}</p>
+                  <p>{{ info.value }}</p>
+                </div>
+              </ion-col>
+            </ion-row>
+          </div>
+          <div *ngIf="aboutContent.id == 'systemInfo'">
+            <ion-row>
+              <ion-col >
+                <div *ngFor="let info of systemInfo">
+                  <div class="content"><b>{{ info.key }}</b><br>{{ info.value }}</div>
+                </div>
+              </ion-col>
+            </ion-row>
+          </div>
+
+          <div *ngIf="aboutContent.id == 'eventStatus'">
             <ion-item (tap)="viewEventsSynchronisationStatusByProgram('synced')">
               <h2>Synced</h2>
               <p>{{ eventsStorage.online }}</p>
@@ -60,22 +76,98 @@
               <h2>Not Synced</h2>
               <p>{{ eventsStorage.offline }}</p>
             </ion-item>
-          </ion-item-group>
-          <ion-list></ion-list>
-          <ion-item-group>
-            <ion-item-divider color="whitecolor">
-              <b>System Information</b>
-            </ion-item-divider>
-            <div *ngFor="let entry of systemInformation;let currentSystemInfoIndex = index">
-              <ion-item >
-                <h2>{{ entry.key }}</h2>
-                <p>{{ entry.value }}</p>
-              </ion-item>
-            </div>
-          </ion-item-group>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+          </div>
 
-  </div>
+          <div *ngIf="aboutContent.id == 'dataValues'">
+            <ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('synced')">
+              <h2>Synced</h2>
+              <p>{{ dataValuesStorage.online }}</p>
+            </ion-item>
+            <ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('not_synced')">
+              <h2>Not Synced</h2>
+              <p>{{ dataValuesStorage.offline }}</p>
+            </ion-item>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+  </ion-grid>
+
 </ion-content>
+
+<!--<ion-content class="about">-->
+  <!--<div *ngIf="loadingData">-->
+    <!--<ion-row >-->
+      <!--<ion-col >-->
+        <!--<page-loading loadingSize="large" [loadingMessage]="loadingMessages[loadingMessages.length - 1]"></page-loading>-->
+      <!--</ion-col>-->
+    <!--</ion-row>-->
+  <!--</div>-->
+
+  <!--<div *ngIf="!loadingData" >-->
+
+    <!--<ion-refresher (ionRefresh)="reLoadContents($event)">-->
+      <!--<ion-refresher-content ></ion-refresher-content>-->
+    <!--</ion-refresher>-->
+
+    <!--<ion-grid>-->
+      <!--<ion-row>-->
+        <!--<ion-col >-->
+          <!--<ion-item-group>-->
+            <!--<ion-item-divider color="whitecolor">-->
+              <!--<b>App Information</b>-->
+            <!--</ion-item-divider>-->
+            <!--<ion-item *ngFor="let entry of appInformation;let currentAppInfoIndex = index ">-->
+              <!--<h2>{{ entry.key }}</h2>-->
+              <!--<p>{{ entry.value }}</p>-->
+            <!--</ion-item>-->
+          <!--</ion-item-group>-->
+          <!--<ion-list></ion-list>-->
+          <!--<ion-item-group>-->
+            <!--<ion-item-divider color="whitecolor">-->
+              <!--<b>Data Values Status</b>-->
+            <!--</ion-item-divider>-->
+            <!--<ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('synced')">-->
+              <!--<h2>Synced</h2>-->
+              <!--<p>{{ dataValuesStorage.online }}</p>-->
+            <!--</ion-item>-->
+            <!--<ion-item (tap)="viewDataValuesSynchronisationStatusByDataSets('not_synced')">-->
+              <!--<h2>Not Synced</h2>-->
+              <!--<p>{{ dataValuesStorage.offline }}</p>-->
+            <!--</ion-item>-->
+          <!--</ion-item-group>-->
+          <!--<ion-list></ion-list>-->
+          <!--<ion-item-group>-->
+            <!--<ion-item-divider color="whitecolor">-->
+              <!--<b>Event Storage Status</b>-->
+            <!--</ion-item-divider>-->
+            <!--<ion-item (tap)="viewEventsSynchronisationStatusByProgram('synced')">-->
+              <!--<h2>Synced</h2>-->
+              <!--<p>{{ eventsStorage.online }}</p>-->
+            <!--</ion-item>-->
+            <!--<ion-item (tap)="viewEventsSynchronisationStatusByProgram('not_synced')">-->
+              <!--<h2>Not Synced</h2>-->
+              <!--<p>{{ eventsStorage.offline }}</p>-->
+            <!--</ion-item>-->
+          <!--</ion-item-group>-->
+          <!--<ion-list></ion-list>-->
+          <!--<ion-item-group>-->
+            <!--<ion-item-divider color="whitecolor">-->
+              <!--<b>System Information</b>-->
+            <!--</ion-item-divider>-->
+            <!--<div *ngFor="let entry of systemInformation;let currentSystemInfoIndex = index">-->
+              <!--<ion-item >-->
+                <!--<h2>{{ entry.key }}</h2>-->
+                <!--<p>{{ entry.value }}</p>-->
+              <!--</ion-item>-->
+            <!--</div>-->
+          <!--</ion-item-group>-->
+        <!--</ion-col>-->
+      <!--</ion-row>-->
+    <!--</ion-grid>-->
+
+  <!--</div>-->
+<!--</ion-content>-->
